..F....... [ZBXNEXT-583] added the maintenance filter to the trigger status page (Pavels)
A......... [ZBX-5351] implemented the "selectTimeperiods" parameter for the maintenance.get method (Pavels)
..F....... [ZBX-4972] added the ability to edit map links in the element mass update form (Pavels)

Bug fixes:
..F....... [ZBX-5393] fixed translation escaping in HTML areas causing some languages to display incorrect text (Toms)
..F....... [ZBX-5393] fixed broken target selection in action form (Toms)
A.F....... [ZBX-5489] removed API methods CAlert->create(), CAlert->delete(), CEvent->create(), CEvent->delete(), CEvent->deleteByTriggerIDs() (Eduard)
.......PS. [ZBX-5483] fixed response to requests of the sender with missing fields (Sasha)
..F....... [ZBX-5429] fixed hintbox displaying when menu is shown (Eduard)
..F....... [ZBX-5444] fixed maintenance hint not accessible if user has no permissions (Toms)
..F....... [ZBX-5444] added functionality to hints, and now all newlines are converted to <br> tag (Toms)
..F....... [ZBX-5444] fixed host in maintenance not highlighted by adding icon to hosts in maintenance (Toms)
..F....... [ZBX-5444] fixed "last 20 issue" widget lines being 2px higher than other table lines in dashboard (Toms)
..F....... [ZBX-5444] made host names with maintenance description correctly aligning in new lines in Monitoring->triggers when browser window width is changed (Toms)
..F....... [ZBX-5488] fixed web items macros in map labels (Eduard)
..F....... [ZBX-5437] fixed error when templated trigger description contain interface macro (Vedmak)
..F....... [ZBX-5411] fixed map element links sorting in element configuration form (Vedmak)
..F....... [ZBX-5465] fixed the "Filter by host group" select not being populated in the availability report page filter (Pavels)
..F....... [ZBX-5465] corrected the labels for the host group and host filter on the "by host" availability report page (Pavels)