@@ -13,6 +13,7 @@ A......... [ZBX-5351] implemented the "selectTimeperiods" parameter for the main
 ..F....... [ZBX-4972] added the ability to edit map links in the element mass update form (Pavels)
 
 Bug fixes:
+..F....... [ZBX-5204] changed the color of inactive tabs to blue in the classic theme (Pavels)
 ..F....... [ZBX-5393] fixed translation escaping in HTML areas causing some languages to display incorrect text (Toms)
 ..F....... [ZBX-5393] fixed broken target selection in action form (Toms)
 A.F....... [ZBX-5489] removed API methods CAlert->create(), CAlert->delete(), CEvent->create(), CEvent->delete(), CEvent->deleteByTriggerIDs() (Eduard)
